--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         arch: arm64
         compiler: proton-clang/master/binutils
-        defconfig: whyred_defconfig
+        defconfig: vendor/bouquet_defconfig
         image: Image.gz-dtb
         
     - name: upload
